; ModuleID = '/home/carl/AnghaBench/lab/engine/code/tools/lcc/src/extr_dag.c_labelnode.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/tools/lcc/src/extr_dag.c_labelnode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32* }

@forest = common dso_local global %struct.TYPE_2__* null, align 8
@LABEL = common dso_local global i64 0, align 8
@V = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @labelnode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @labelnode(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @assert(i32 %3)
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @forest, align 8
  %6 = icmp ne %struct.TYPE_2__* %5, null
  br i1 %6, label %7, label %24

7:                                                ; preds = %1
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @forest, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @LABEL, align 8
  %12 = load i64, i64* @V, align 8
  %13 = add nsw i64 %11, %12
  %14 = icmp eq i64 %10, %13
  br i1 %14, label %15, label %24

15:                                               ; preds = %7
  %16 = load i32, i32* %2, align 4
  %17 = call i32 @findlabel(i32 %16)
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** @forest, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 1
  %20 = load i32*, i32** %19, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @equatelab(i32 %17, i32 %22)
  br label %32

24:                                               ; preds = %7, %1
  %25 = load i64, i64* @LABEL, align 8
  %26 = load i64, i64* @V, align 8
  %27 = add nsw i64 %25, %26
  %28 = load i32, i32* %2, align 4
  %29 = call i32 @findlabel(i32 %28)
  %30 = call i32 @newnode(i64 %27, i32* null, i32* null, i32 %29)
  %31 = call i32 @list(i32 %30)
  br label %32

32:                                               ; preds = %24, %15
  %33 = call i32 (...) @reset()
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @equatelab(i32, i32) #1

declare dso_local i32 @findlabel(i32) #1

declare dso_local i32 @list(i32) #1

declare dso_local i32 @newnode(i64, i32*, i32*, i32) #1

declare dso_local i32 @reset(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
